# smart_architect_office

./: CMakeLists.txt  ClientManager.pro  README.md  SmartOffice_Employees.pro  Taskmanager.pro  databaseconnection.cpp  databaseconnection.h  invoice.cpp  invoice.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.pro  resources.qrc  version.rc.in
